# MastekoFM

./: .firebaserc  .gitignore  ARCHITECTURE.md  BACKLOG.md  CLAUDE.md  LESSONS_LEARNED.md  LICENSE  README.md  SESSION_HANDOFF.md  SPRINT0_KICKOFF.md  cloudbuild.yaml  deploy-dev.sh  deploy-prod.sh  firebase.json  pyproject.toml
.github/workflows/: ci.yml  deploy-dev.yml  (+2 more)
backend/: Dockerfile  requirements.txt
docs/: README.md  REDESIGN_2026_04.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
scripts/: build_campus_adele_seed.py  build_helloworld_seed.py
seed/: README.md
skills/: SKILL_dag_execution.md  SKILL_datasource_connectors.md  SKILL_excel_engine.md  SKILL_report_generation.md
tests/: conftest.py  test_airtable_connector.py  test_assumption_packs_router.py  test_assumptions.py  test_auth.py  test_checkout.py  test_config.py  test_connectors_xlsx_link.py  test_csv_connector.py  test_datasource_sync.py  test_datasources.py  test_drive_naming.py  test_e2e_smoke_script.py  test_engine_m_prefix.py  test_excel_connector.py  test_excel_projects_router.py  test_excel_template_engine.py  test_excel_templates_router.py  test_health.py  test_models_router.py  test_pack_store.py  test_pack_store_fallback.py  test_projects.py  test_projects_router.py  test_run_executor.py  test_run_validator.py  test_run_worker.py  test_runs_router.py  test_scenario_store.py  test_secrets.py  test_seed_router.py  test_table_assumptions.py  test_template_groups.py  test_templates.py  test_tree_router.py  test_workspaces_router.py
(+136 files in other folders)
